--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
     </main>
 
     <footer class="footer">
-        <div class="footer__text u-center-text u-margin-bottom-large">
+        <div class="footer__text u-margin-bottom-large">
             Connect With Us
         </div>
         <div class="footer__social">
