some refactoring and commenting

--- a/index.html
+++ b/index.html
@@ -4,18 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Font Family  -->
     <link
       href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Pacifico&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <!-- Favicon -->
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="css/style.css" />
+    <!-- Title -->
     <title>
       Travelling World || Thrilling and Inspiring Tours For Adventurous People
     </title>
   </head>
 
   <body>
+    <!-------------------------- Message Box ---------------------------->
     <div class="talking">
       <input
         type="checkbox"
@@ -53,7 +58,7 @@
         </div>
       </div>
     </div>
-
+    <!-------------------------- Navigation ---------------------------->
     <div class="navigation">
       <input
         type="checkbox"
@@ -92,7 +97,7 @@
         </ul>
       </nav>
     </div>
-
+    <!-------------------------- Header Section ---------------------------->
     <header class="header">
       <div class="header__logo-box">
         <div class="header__photo">
@@ -117,13 +122,17 @@
         </a>
       </div>
     </header>
-
     <main>
+      <!-------------------------- About Section ---------------------------->
       <section id="section-about">
+        <!-- Heading secondary for All section title -->
         <div class="u-center-text u-margin-bottom-extraLarge">
-          <h2 class="heading-tertiary">Exciting Tours for Adventures people</h2>
+          <h2 class="heading-secondary">
+            Exciting Tours for Adventures people
+          </h2>
         </div>
         <div class="row">
+          <!-- picture -->
           <div class="col-1-of-2">
             <div class="composition">
               <img
@@ -138,11 +147,14 @@
               />
             </div>
           </div>
+          <!-- About us -->
           <div class="col-1-of-2">
             <div class="about">
-              <!-- <h2 class="heading-secondary u-margin-bottom-small">About Us</h2> -->
               <h3
-                class="about__heading u-margin-bottom-small u-margin-top-small"
+                class="
+                  heading-tertiary
+                  u-margin-bottom-small u-margin-top-small
+                "
               >
                 You are Going To Fall in Love With nature
               </h3>
@@ -151,7 +163,7 @@
                 reprehenderit velit ipsam explicabo blanditiis. Voluptate
                 aperiam unde deleniti nesciunt nihil.
               </p>
-              <h3 class="about__heading u-margin-bottom-small">
+              <h3 class="heading-tertiary u-margin-bottom-small">
                 You are Going To Fall in Love With nature
               </h3>
               <p class="paragraph u-margin-bottom-small">
@@ -164,14 +176,17 @@
           </div>
         </div>
       </section>
+      <!-------------------------- Services Section ---------------------------->
       <section id="section-services">
+        <!-- row-1 -->
         <div class="row u-margin-bottom-extraLarge">
+          <!-- services-box-1 -->
           <div class="col-1-of-3">
             <div class="services-box">
               <svg class="services-box__icon u-margin-bottom-small">
                 <use xlink:href="img/sprite.svg#icon-global"></use>
               </svg>
-              <h3 class="services-box__heading u-margin-bottom-small">
+              <h3 class="heading-tertiary u-margin-bottom-small">
                 Explore The world
               </h3>
               <p class="services-box__paragraph u-text">
@@ -181,12 +196,13 @@
               </p>
             </div>
           </div>
+          <!-- services-box-2 -->
           <div class="col-1-of-3">
             <div class="services-box">
               <svg class="services-box__icon u-margin-bottom-small">
                 <use xlink:href="img/sprite.svg#icon-compass2"></use>
               </svg>
-              <h3 class="services-box__heading u-margin-bottom-small">
+              <h3 class="heading-tertiary u-margin-bottom-small">
                 Meet Nature
               </h3>
               <p class="services-box__paragraph u-text">
@@ -196,12 +212,13 @@
               </p>
             </div>
           </div>
+          <!-- services-box-3 -->
           <div class="col-1-of-3">
             <div class="services-box">
               <svg class="services-box__icon u-margin-bottom-small">
                 <use xlink:href="img/sprite.svg#icon-map"></use>
               </svg>
-              <h3 class="services-box__heading u-margin-bottom-small">
+              <h3 class="heading-tertiary u-margin-bottom-small">
                 Find Your Way of Happiness
               </h3>
               <p class="services-box__paragraph u-text">
@@ -212,14 +229,15 @@
             </div>
           </div>
         </div>
-
+        <!-- row-2 -->
         <div class="row">
+          <!-- services-box-4 -->
           <div class="col-1-of-3">
             <div class="services-box">
               <svg class="services-box__icon u-margin-bottom-small">
                 <use xlink:href="img/sprite.svg#icon-heart-outlined"></use>
               </svg>
-              <h3 class="services-box__heading u-margin-bottom-small">
+              <h3 class="heading-tertiary u-margin-bottom-small">
                 live a healthier Life
               </h3>
               <p class="services-box__paragraph u-text">
@@ -229,12 +247,13 @@
               </p>
             </div>
           </div>
+          <!-- services box-5 -->
           <div class="col-1-of-3">
             <div class="services-box">
               <svg class="services-box__icon u-margin-bottom-small">
                 <use xlink:href="img/sprite.svg#icon-aircraft-take-off"></use>
               </svg>
-              <h3 class="services-box__heading u-margin-bottom-small">
+              <h3 class="heading-tertiary u-margin-bottom-small">
                 Take Only Memories
               </h3>
               <p class="services-box__paragraph u-text">
@@ -244,12 +263,13 @@
               </p>
             </div>
           </div>
+          <!-- services-box-6 -->
           <div class="col-1-of-3">
             <div class="services-box">
               <svg class="services-box__icon u-margin-bottom-small">
                 <use xlink:href="img/sprite.svg#icon-trophy"></use>
               </svg>
-              <h3 class="services-box__heading u-margin-bottom-small">
+              <h3 class="heading-tertiary u-margin-bottom-small">
                 Found Happy Places
               </h3>
               <p class="services-box__paragraph u-text">
@@ -261,12 +281,15 @@
           </div>
         </div>
       </section>
-
+      <!-------------------------- Places of Tours ---------------------------->
       <section id="section-tours">
+        <!-- Heading secondary for All section title -->
         <div class="u-center-text u-margin-bottom-extraLarge">
-          <h2 class="heading-tertiary">Our Tours For Adventurous People</h2>
+          <h2 class="heading-secondary">Our Tours For Adventurous People</h2>
         </div>
+        <!-- row-1 -->
         <div class="row">
+          <!-- tour-place-1 -->
           <div class="tour">
             <div class="tour__details">
               <h3 class="tour__heading u-margin-bottom-small">
@@ -288,8 +311,9 @@
             </div>
           </div>
         </div>
-
+        <!-- row-2 -->
         <div class="row">
+          <!-- tour-place-2 -->
           <div class="tour">
             <div class="tour__picture">
               <img src="img/bg24.jpg" alt="" class="tour__picture--img" />
@@ -310,8 +334,9 @@
             </div>
           </div>
         </div>
-
+        <!-- row-3 -->
         <div class="row">
+          <!-- tour place-3 -->
           <div class="tour">
             <div class="tour__details">
               <h3 class="tour__heading u-margin-bottom-small">
@@ -333,8 +358,9 @@
             </div>
           </div>
         </div>
-
+        <!-- row-4 -->
         <div class="row">
+          <!-- tour-place-4 -->
           <div class="tour">
             <div class="tour__picture">
               <img src="img/sea.jpg" alt="" class="tour__picture--img" />
@@ -359,12 +385,14 @@
           <a href="#" class="btn btn--orangered">explore all places</a>
         </div>
       </section>
-
+      <!-------------------------- Popular Tours ---------------------------->
       <section class="section-popular-tours" id="section-tours">
+        <!-- Heading secondary for All section title -->
         <div class="u-center-text u-margin-bottom-extraLarge">
-          <h2 class="heading-tertiary">Most Popular Tours</h2>
+          <h2 class="heading-secondary">Most Popular Tours</h2>
         </div>
         <div class="row">
+          <!-- card-1 -->
           <div class="col-1-of-3">
             <div class="card">
               <div class="card__side card__side--forepart">
@@ -397,7 +425,7 @@
               </div>
             </div>
           </div>
-
+          <!-- card-2 -->
           <div class="col-1-of-3">
             <div class="card">
               <div class="card__side card__side--forepart">
@@ -430,7 +458,7 @@
               </div>
             </div>
           </div>
-
+          <!-- card-3 -->
           <div class="col-1-of-3">
             <div class="card">
               <div class="card__side card__side--forepart">
@@ -469,14 +497,17 @@
           <a href="#" class="btn btn--green">Explore ALl Tours</a>
         </div>
       </section>
-
+      <!-------------------------- Experience Section ---------------------------->
       <section id="section-experience">
+        <!-- Heading secondary for All section title -->
         <div class="u-center-text u-margin-bottom-extraLarge">
-          <h2 class="heading-tertiary text-color">
+          <h2 class="heading-secondary text-color">
             With Our Experience We will serve you
           </h2>
         </div>
+        <!-- row-1 -->
         <div class="row">
+          <!-- experience-1 -->
           <div class="col-1-of-2">
             <div class="experience">
               <figure class="experience__photo">
@@ -505,6 +536,7 @@
               </div>
             </div>
           </div>
+          <!-- experience-2 -->
           <div class="col-1-of-2">
             <div class="experience">
               <figure class="experience__photo">
@@ -537,7 +569,9 @@
             </div>
           </div>
         </div>
+        <!-- row-2 -->
         <div class="row">
+          <!-- experience-3 -->
           <div class="col-1-of-2">
             <div class="experience">
               <figure class="experience__photo">
@@ -565,6 +599,7 @@
               </div>
             </div>
           </div>
+          <!-- experience-4 -->
           <div class="col-1-of-2">
             <div class="experience">
               <figure class="experience__photo">
@@ -601,19 +636,21 @@
           <a href="#" class="btn btn--orangered">Read All Stories &rarr;</a>
         </div>
       </section>
-
+      <!-------------------------- Testimonials Section ---------------------------->
       <section class="section-stories">
+        <!-- background-video -->
         <div class="bg-video">
           <video class="bg-video__content" autoplay muted loop>
             <source src="img/Birds.mp4" type="video/mp4" />
           </video>
         </div>
-
+        <!-- Heading secondary for All section title -->
         <div class="u-center-text u-margin-bottom-extraLarge">
-          <h2 class="heading-tertiary">WE Make People Genuinely Happy</h2>
+          <h2 class="heading-secondary">WE Make People Genuinely Happy</h2>
         </div>
-
+        <!-- row-1 -->
         <div class="row">
+          <!-- testimonial-1 -->
           <div class="story u-margin-bottom-large">
             <figure class="story__shape">
               <img src="img/male-photo2.jpg" alt="" class="story__image" />
@@ -621,7 +658,7 @@
             </figure>
 
             <div class="story__text">
-              <h3 class="heading-10">
+              <h3 class="heading-tertiary">
                 I had The Best Two Weeks Ever WIth my Family
               </h3>
               <p>
@@ -636,8 +673,9 @@
             </div>
           </div>
         </div>
-
+        <!-- row-2 -->
         <div class="row">
+          <!-- testimonial-2 -->
           <div class="story">
             <figure class="story__shape">
               <img src="img/male-photo2.jpg" alt="" class="story__image" />
@@ -645,7 +683,7 @@
             </figure>
 
             <div class="story__text">
-              <h3 class="heading-10">
+              <h3 class="heading-tertiary">
                 I had The Best Two Weeks Ever WIth my Family
               </h3>
               <p>
@@ -665,14 +703,15 @@
           <a href="#" class="btn btn--green">Read All Stories &rarr;</a>
         </div>
       </section>
-
+      <!-------------------------- Booking Section ---------------------------->
       <section id="section-book">
         <div class="row">
           <div class="book">
             <div class="book__form">
               <form action="#" class="form">
+                <!-- Heading secondary for All section title -->
                 <div class="u-margin-bottom-large">
-                  <h2 class="heading-tertiary">Start Booking Now</h2>
+                  <h2 class="heading-secondary">Start Booking Now</h2>
                 </div>
                 <div class="form__group">
                   <input
@@ -730,9 +769,10 @@
         </div>
       </section>
     </main>
-
+    <!--------------------------  Footer Section ---------------------------->
     <footer class="footer">
       <div class="footer__text u-margin-bottom-large">Connect With Us</div>
+      <!-- social-Icon -->
       <div class="footer__social">
         <a href="#">
           <svg class="footer__icon">
@@ -762,6 +802,7 @@
         </a>
       </div>
       <div class="row">
+        <!-- footer Navigation -->
         <div class="col-1-of-2">
           <div class="footer__navigation">
             <ul class="footer__lists">
@@ -786,6 +827,7 @@
             </ul>
           </div>
         </div>
+        <!-- footer copyright -->
         <div class="col-1-of-2">
           <p class="footer__copyright">
             Built by <a href="" class="footer__link"> Ra Ju </a> for his
@@ -796,6 +838,7 @@
       </div>
     </footer>
 
+    <!-------------------------- Fluid layouts created by Float properties ---------------------------->
     <!-- <section class="grid-test">
         <div class="row">
             <div class="col-1-of-2">col-1-of-2</div>
