--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Font Family  -->
+    <!--+-+-+-+-+-+-+-+ Font Family  +-+-+-+-+-+-+-+-->
     <link
       href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Pacifico&display=swap"
       rel="stylesheet"
     />
-    <!-- Favicon -->
+    <!--+-+-+-+-+-+-+-+ Favicon +-+-+-+-+-+-+-+-->
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
-    <!-- Stylesheet -->
+    <!--+-+-+-+-+-+-+-+ Stylesheet +-+-+-+-+-+-+-+-->
     <link rel="stylesheet" href="css/style.css" />
-    <!-- Title -->
+    <!--+-+-+-+-+-+-+-+ Title+-+-+-+-+-+-+-+-->
     <title>
       Travelling World || Thrilling and Inspiring Tours For Adventurous People
     </title>
   </head>
 
   <body>
-    <!-------------------------- Message Box ---------------------------->
+    <!--+-+-+-+-+-+-+-- Message Box +-+-+-+-+-+-+-+-->
     <div class="talking">
       <input
         type="checkbox"
@@ -58,7 +58,8 @@
         </div>
       </div>
     </div>
-    <!-------------------------- Navigation ---------------------------->
+
+    <!--+-+-+-+-+-+-+-- Navigation +-+-+-+-+-+-+-+-->
     <div class="navigation">
       <input
         type="checkbox"
@@ -70,7 +71,7 @@
         <span class="navigation__icon">&nbsp;</span>
       </label>
       <div class="navigation__background">&nbsp;</div>
-
+      <!-- Navigation Content -->
       <nav class="navigation__nav">
         <ul class="navigation__lists">
           <li class="navigation__list">
@@ -97,8 +98,9 @@
         </ul>
       </nav>
     </div>
-    <!-------------------------- Header Section ---------------------------->
+    <!--+-+-+-+-+-+-+-- Header Section +-+-+-+-+-+-+-+-->
     <header class="header">
+      <!-- Header Logo Box -->
       <div class="header__logo-box">
         <div class="header__photo">
           <img src="img/logo-white.png" alt="" class="header__img" />
@@ -107,23 +109,18 @@
           <a href="#" class="header__tittle--name">Travelling World</a>
         </div>
       </div>
+      <!-- Header Content Box -->
       <div class="header__content">
         <h1 class="heading-primary">
           <span class="heading-primary--main">Outdoors</span>
           <span class="heading-primary--sub">IS WHERE LIFE HAPPENS</span>
         </h1>
-        <a href="#" class="btn-text btn--animated">explore places</a>
-        <a href="#" class="btn-secondary btn--animated">
-          Discover Our Tours
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
-        </a>
+        <a href="#" class="btn btn--white btn--animated">Discover Our Tours</a>
       </div>
     </header>
+
     <main>
-      <!-------------------------- About Section ---------------------------->
+      <!--+-+-+-+-+-+-+-- About Section +-+-+-+-+-+-+-+-->
       <section id="section-about">
         <!-- Heading secondary for All section title -->
         <div class="u-center-text u-margin-bottom-extraLarge">
@@ -131,17 +128,18 @@
             Exciting Tours for Adventures people
           </h2>
         </div>
+        <!-- content start -->
         <div class="row">
           <!-- picture -->
           <div class="col-1-of-2">
             <div class="composition">
               <img
-                src="img/bg31.jpg"
+                src="img/bg50.jpg"
                 alt=""
                 class="composition__photo composition__photo--1"
               />
               <img
-                src="img/about1.jpg"
+                src="img/bg52.jpg"
                 alt=""
                 class="composition__photo composition__photo--2"
               />
@@ -176,7 +174,7 @@
           </div>
         </div>
       </section>
-      <!-------------------------- Services Section ---------------------------->
+      <!--+-+-+-+-+-+-+-- Services Section +-+-+-+-+-+-+-+-->
       <section id="section-services">
         <!-- row-1 -->
         <div class="row u-margin-bottom-extraLarge">
@@ -229,59 +227,8 @@
             </div>
           </div>
         </div>
-        <!-- row-2 -->
-        <div class="row">
-          <!-- services-box-4 -->
-          <div class="col-1-of-3">
-            <div class="services-box">
-              <svg class="services-box__icon u-margin-bottom-small">
-                <use xlink:href="img/sprite.svg#icon-heart-outlined"></use>
-              </svg>
-              <h3 class="heading-tertiary u-margin-bottom-small">
-                live a healthier Life
-              </h3>
-              <p class="services-box__paragraph u-text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat
-                dignissimos facere architecto facilis. Lorem ipsum dolor sit
-                amet Lorem ipsum facilis .
-              </p>
-            </div>
-          </div>
-          <!-- services box-5 -->
-          <div class="col-1-of-3">
-            <div class="services-box">
-              <svg class="services-box__icon u-margin-bottom-small">
-                <use xlink:href="img/sprite.svg#icon-aircraft-take-off"></use>
-              </svg>
-              <h3 class="heading-tertiary u-margin-bottom-small">
-                Take Only Memories
-              </h3>
-              <p class="services-box__paragraph u-text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat
-                dignissimos facere architecto facilis. Lorem ipsum dolor sit
-                amet Lorem ipsum facilis .
-              </p>
-            </div>
-          </div>
-          <!-- services-box-6 -->
-          <div class="col-1-of-3">
-            <div class="services-box">
-              <svg class="services-box__icon u-margin-bottom-small">
-                <use xlink:href="img/sprite.svg#icon-trophy"></use>
-              </svg>
-              <h3 class="heading-tertiary u-margin-bottom-small">
-                Found Happy Places
-              </h3>
-              <p class="services-box__paragraph u-text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat
-                dignissimos facere architecto facilis. Lorem ipsum dolor sit
-                amet Lorem ipsum facilis .
-              </p>
-            </div>
-          </div>
-        </div>
       </section>
-      <!-------------------------- Places of Tours ---------------------------->
+      <!--+-+-+-+-+-+-+-- Places of Tours +-+-+-+-+-+-+-+-->
       <section id="section-tours">
         <!-- Heading secondary for All section title -->
         <div class="u-center-text u-margin-bottom-extraLarge">
@@ -303,11 +250,11 @@
                 perferendis eveniet fugiat. Lorem ipsum dolor, sit amet
                 consectetur adipisicing elit.
               </p>
-              <a href="#" class="btn btn--white">Explore Full View</a>
+              <a href="#" class="btn-text btn--animated">Explore Full View</a>
             </div>
 
             <div class="tour__picture">
-              <img src="img/nature1.jpg" alt="" class="tour__picture--img" />
+              <img src="img/bg10.jpg" alt="" class="tour__picture--img" />
             </div>
           </div>
         </div>
@@ -316,12 +263,12 @@
           <!-- tour-place-2 -->
           <div class="tour">
             <div class="tour__picture">
-              <img src="img/bg24.jpg" alt="" class="tour__picture--img" />
+              <img src="img/bg55.jpg" alt="" class="tour__picture--img" />
             </div>
             <div class="tour__details">
               <h3 class="tour__heading u-margin-bottom-small">
                 <span class="tour__heading-span tour__heading-span--1"
-                  >The Forest Hiker</span
+                  >The City Traveller</span
                 >
               </h3>
               <p class="paragraph text-color u-margin-bottom-large">
@@ -330,7 +277,7 @@
                 perferendis eveniet fugiat. Lorem ipsum dolor, sit amet
                 consectetur adipisicing elit.
               </p>
-              <a href="#" class="btn btn--white">Explore Full View</a>
+              <a href="#" class="btn-text btn--animated">Explore Full View</a>
             </div>
           </div>
         </div>
@@ -350,11 +297,11 @@
                 perferendis eveniet fugiat. Lorem ipsum dolor, sit amet
                 consectetur adipisicing elit.
               </p>
-              <a href="#" class="btn btn--white">Explore Full View</a>
+              <a href="#" class="btn-text btn--animated">Explore Full View</a>
             </div>
 
             <div class="tour__picture">
-              <img src="img/snow.jpg" alt="" class="tour__picture--img" />
+              <img src="img/bg2.jpg" alt="" class="tour__picture--img" />
             </div>
           </div>
         </div>
@@ -377,20 +324,28 @@
                 perferendis eveniet fugiat. Lorem ipsum dolor, sit amet
                 consectetur adipisicing elit.
               </p>
-              <a href="#" class="btn btn--white">Explore Full View</a>
+              <a href="#" class="btn-text btn--animated">Explore Full View</a>
             </div>
           </div>
         </div>
+        <!-- button -->
         <div class="u-center-text u-margin-top-extraLarge">
-          <a href="#" class="btn btn--orangered">explore all places</a>
+          <a href="#" class="btn-secondary">
+            Explore All Tours
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+          </a>
         </div>
       </section>
-      <!-------------------------- Popular Tours ---------------------------->
+      <!--+-+-+-+-+-+-+-- Popular Tours +-+-+-+-+-+-+-+-->
       <section class="section-popular-tours" id="section-tours">
         <!-- Heading secondary for All section title -->
         <div class="u-center-text u-margin-bottom-extraLarge">
           <h2 class="heading-secondary">Most Popular Tours</h2>
         </div>
+        <!-- content start -->
         <div class="row">
           <!-- card-1 -->
           <div class="col-1-of-3">
@@ -494,10 +449,16 @@
         </div>
 
         <div class="u-center-text u-margin-top-extraLarge">
-          <a href="#" class="btn btn--green">Explore ALl Tours</a>
+          <a href="#" class="btn-secondary">
+            All Popular Tours
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+          </a>
         </div>
       </section>
-      <!-------------------------- Experience Section ---------------------------->
+      <!--+-+-+-+-+-+-+-- Experience Section +-+-+-+-+-+-+-+-->
       <section id="section-experience">
         <!-- Heading secondary for All section title -->
         <div class="u-center-text u-margin-bottom-extraLarge">
@@ -511,7 +472,7 @@
           <div class="col-1-of-2">
             <div class="experience">
               <figure class="experience__photo">
-                <img src="img/person1.jpg" alt="" class="experience__img" />
+                <img src="img/bg4.jpg" alt="" class="experience__img" />
                 <figcaption class="experience__caption">
                   <h3 class="experience__heading">
                     <span
@@ -540,11 +501,7 @@
           <div class="col-1-of-2">
             <div class="experience">
               <figure class="experience__photo">
-                <img
-                  src="img/travel-image1.jpg"
-                  alt=""
-                  class="experience__img"
-                />
+                <img src="img/img-4.jpg" alt="" class="experience__img" />
                 <figcaption class="experience__caption">
                   <h3 class="experience__heading">
                     <span
@@ -575,7 +532,7 @@
           <div class="col-1-of-2">
             <div class="experience">
               <figure class="experience__photo">
-                <img src="img/male-photo2.jpg" alt="" class="experience__img" />
+                <img src="img/pic1.jpg" alt="" class="experience__img" />
                 <figcaption class="experience__caption">
                   <h3 class="experience__heading">
                     <span
@@ -603,11 +560,7 @@
           <div class="col-1-of-2">
             <div class="experience">
               <figure class="experience__photo">
-                <img
-                  src="img/travel-image1.jpg"
-                  alt=""
-                  class="experience__img"
-                />
+                <img src="img/about2.jpg" alt="" class="experience__img" />
                 <figcaption class="experience__caption">
                   <h3 class="experience__heading">
                     <span
@@ -632,11 +585,8 @@
             </div>
           </div>
         </div>
-        <div class="u-center-text u-margin-top-extraLarge">
-          <a href="#" class="btn btn--orangered">Read All Stories &rarr;</a>
-        </div>
       </section>
-      <!-------------------------- Testimonials Section ---------------------------->
+      <!--+-+-+-+-+-+-+-- Testimonials Section +-+-+-+-+-+-+-+-->
       <section class="section-stories">
         <!-- background-video -->
         <div class="bg-video">
@@ -653,7 +603,7 @@
           <!-- testimonial-1 -->
           <div class="story u-margin-bottom-large">
             <figure class="story__shape">
-              <img src="img/male-photo2.jpg" alt="" class="story__image" />
+              <img src="img/male-photo1.jpg" alt="" class="story__image" />
               <figcaption class="story__caption">Bill Gates</figcaption>
             </figure>
 
@@ -678,7 +628,7 @@
           <!-- testimonial-2 -->
           <div class="story">
             <figure class="story__shape">
-              <img src="img/male-photo2.jpg" alt="" class="story__image" />
+              <img src="img/male-photo3.jpg" alt="" class="story__image" />
               <figcaption class="story__caption">Bill Gates</figcaption>
             </figure>
 
@@ -700,10 +650,16 @@
         </div>
 
         <div class="u-center-text u-margin-top-extraLarge">
-          <a href="#" class="btn btn--green">Read All Stories &rarr;</a>
+          <a href="#" class="btn-secondary btn--animated">
+            Read All Stories
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+          </a>
         </div>
       </section>
-      <!-------------------------- Booking Section ---------------------------->
+      <!--+-+-+-+-+-+-+-- Booking Section +-+-+-+-+-+-+-+-->
       <section id="section-book">
         <div class="row">
           <div class="book">
@@ -769,7 +725,7 @@
         </div>
       </section>
     </main>
-    <!--------------------------  Footer Section ---------------------------->
+    <!--+-+-+-+-+-+-+-- Footer Section +-+-+-+-+-+-+-+-->
     <footer class="footer">
       <div class="footer__text u-margin-bottom-large">Connect With Us</div>
       <!-- social-Icon -->
@@ -838,7 +794,7 @@
       </div>
     </footer>
 
-    <!-------------------------- Fluid layouts created by Float properties ---------------------------->
+    <!--+-+-+-+-+-+-+-- Fluid layouts created by Float properties +-+-+-+-+-+-+-+-->
     <!-- <section class="grid-test">
         <div class="row">
             <div class="col-1-of-2">col-1-of-2</div>
