fixed some issues on responsive devices

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="row">
           <!-- picture -->
           <div class="grid grid--gap grid--2-cols">
-            <div class="composition">
+            <!-- <div class="composition">
               <img
                 src="img/bg50.jpg"
                 alt=""
@@ -142,6 +142,28 @@
                 src="img/bg52.jpg"
                 alt=""
                 class="composition__photo composition__photo--2"
+              />
+            </div> -->
+            <div class="composition">
+              <img
+                src="img/bg1.jpg"
+                alt=""
+                class="composition__photo composition__photo--p1"
+              />
+              <img
+                src="img/bg2.jpg"
+                alt=""
+                class="composition__photo composition__photo--p2"
+              />
+              <img
+                src="img/bg30.jpg"
+                alt=""
+                class="composition__photo composition__photo--p3"
+              />
+              <img
+                src="img/bg4.jpg"
+                alt=""
+                class="composition__photo composition__photo--p4"
               />
             </div>
 
@@ -457,7 +479,7 @@
         <!-- row-1 -->
         <div class="row">
           <!-- experience-1 -->
-          <div class="grid grid--gap grid--cols">
+          <div class="grid grid--gap grid--2-cols">
             <div class="experience">
               <figure class="experience__photo">
                 <img src="img/bg4.jpg" alt="" class="experience__img" />
