--- a/index.html
+++ b/index.html
@@ -129,55 +129,50 @@
           </h2>
         </div>
         <!-- content start -->
-        <div class="row">
-          <div class="grid grid--gap grid--2-cols">
-            <!-- About us -->
-            <div class="about">
-              <h3
-                class="
-                  heading-tertiary
-                  u-margin-bottom-small u-margin-top-small
-                "
-              >
-                You are Going To Fall in Love With nature
-              </h3>
-              <p class="paragraph">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Aperiam, ipsum sapiente aspernatur libero repellat quis
-                consequatur ducimus quam nisi exercitationem omnis earum qui.
-              </p>
-              <h3 class="heading-tertiary u-margin-bottom-small">
-                You are Going To Fall in Love With nature
-              </h3>
-              <p class="paragraph">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem
-                reprehenderit velit ipsam explicabo Voluptate aperiam unde.
-              </p>
-              <a href="#" class="btn-text1">Learn More &rarr;</a>
-            </div>
-            <!-- Photos -->
-            <div class="composition">
-              <img
-                src="img/bg1.jpg"
-                alt=""
-                class="composition__photo composition__photo--p1"
-              />
-              <img
-                src="img/bg4.jpg"
-                alt=""
-                class="composition__photo composition__photo--p2"
-              />
-              <img
-                src="img/bg50.jpg"
-                alt=""
-                class="composition__photo composition__photo--p3"
-              />
-              <img
-                src="img/bg52.jpg"
-                alt=""
-                class="composition__photo composition__photo--p4"
-              />
-            </div>
+        <div class="row grid grid--gap grid--2-cols">
+          <!-- About us -->
+          <div class="about">
+            <h3
+              class="heading-tertiary u-margin-bottom-small u-margin-top-small"
+            >
+              You are Going To Fall in Love With nature
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
+              ipsum sapiente aspernatur libero repellat quis consequatur ducimus
+              quam nisi exercitationem omnis earum qui.
+            </p>
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              You are Going To Fall in Love With nature
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem
+              reprehenderit velit ipsam explicabo Voluptate aperiam unde.
+            </p>
+            <a href="#" class="btn-text1">Learn More &rarr;</a>
+          </div>
+          <!-- Photos -->
+          <div class="composition">
+            <img
+              src="img/bg1.jpg"
+              alt=""
+              class="composition__photo composition__photo--p1"
+            />
+            <img
+              src="img/bg4.jpg"
+              alt=""
+              class="composition__photo composition__photo--p2"
+            />
+            <img
+              src="img/bg50.jpg"
+              alt=""
+              class="composition__photo composition__photo--p3"
+            />
+            <img
+              src="img/bg52.jpg"
+              alt=""
+              class="composition__photo composition__photo--p4"
+            />
           </div>
         </div>
       </section>
